--- a/Line-Chart/lineChart.html
+++ b/Line-Chart/lineChart.html
@@ -9,10 +9,10 @@
     </head>
 
     <body>
-        <div id="chart" style="width:600px; height:300px;"></div>
+        <div id="chart" style="width:600px; height:400px;"></div>
         <script src="../lib/Flotr2/flotr2.min.js"></script>
-        <script src="js/lineChart.js"></script>
-        <script src="js/co2.js"></script>
+        <script src="lineChart.js"></script>
+        <script src="data.js"></script>
 
     </body>
 </html>
